[package]
name = "lotus-sector-clean"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["util"]

[dependencies]
util={path="util"}

[dependencies.clap]
version = "3.2"
features = [ "derive" ]

[dependencies.anyhow]
version = "1"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "parking_lot" ]